# ynab_data_collector

./: .env.example  .flake8  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  gitleaks.yml
config/: config.example.yaml
docs/: ARCHITECTURE.md  BRANCH_PROTECTION.md  CI.md  INDEX.md  SETUP.md  USAGE.md
docs/planning/: TASK_MANAGEMENT.md
scripts/github/: branch-protection-config.json
src/: __init__.py  config.py  main.py  utils.py
src/exporters/: __init__.py  csv_exporter.py  json_exporter.py
src/ynab/: __init__.py  client.py  exceptions.py  models.py
tests/: __init__.py  test_config.py  test_main.py  test_utils.py
tests/exporters/: test_csv_exporter.py  test_json_exporter.py
tests/fixtures/: accounts_response.json  budgets_response.json  current_month_response.json  transactions_response.json
tests/integration/: __init__.py  test_export_workflow.py  test_transactions_workflow.py
tests/ynab/: __init__.py  test_client.py  test_models.py
