[project]
name = "ynab-data-collector"
version = "0.1.0"
description = "A CLI app that connects to YNAB and fetches data into different file formats"
requires-python = ">=3.12"

[project.scripts]
ynab-collector = "src.main:cli"

[tool.black]
line-length = 127
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
  | venv
  | build
  | dist
  | __pycache__
)/
'''

[tool.isort]
profile = "black"
line_length = 127
skip_gitignore = true
skip = [".venv", "venv", "build", "dist"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--verbose",
    "--strict-markers",
    "--disable-warnings",
]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
exclude = [
    'venv',
    '.venv',
    'build',
    'dist',
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/.venv/*",
    # Add whitelisted files here - files excluded from coverage requirements
    # Example: Interactive CLI scripts, cloud provider implementations
]

[tool.coverage.report]
# Note: fail_under is NOT set here - it's only enforced in the dedicated
# coverage CI job via --cov-fail-under=95 to keep it non-voting
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    # Whitelisted patterns - excluded from coverage requirements
    "def main\\(\\):",  # Main entry points (often hard to unit test)
    "@abstractmethod",  # Abstract methods
]
